fixed selfie img and aside alignment and added links to imgs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,21 +86,26 @@ aside {
 }
 
 aside .about{
-margin-top: 0px;
+  margin: 0 0 100px 0;
 }
 
 aside .me {
   display: block;
-  text-align: right;
+  padding-left: 125px;
 }
+
  /*aligning selfie with about me*/
 #section1 img{
-  display: flex;
-  flex-wrap: wrap;
-  border: 4px solid var(--bright);
-  height: 10%;
+  float: left;
+  margin: 9px 30px 0 0;
+  border: 4px solid  rgb(27, 100, 36);;
+  height: 90%;
   width: 10%;
 }  
+
+#section1 p {
+  padding-top: 13px;
+}
 
 /*setting up sections for main content*/
 section {
@@ -108,7 +113,7 @@ section {
 }
 
 #work {
-padding: 0 0 1250px 20px;
+padding: 0 0 1250px 23px;
 }
 
 /*using flexbox and styling to organize projects*/
@@ -166,8 +171,24 @@ padding: 0 0 1250px 20px;
   border: 4px solid var(--bright);
 }
 
+.smaller a:link {
+  text-decoration: none;
+}
+
 .smaller:hover {
 opacity: 1;
+}
+
+#js {
+  background-image: url("../images/screenshot.png");
+}
+
+#web {
+  background-image: url("../images/screenshot.png");
+}
+
+#third {
+  background-image: url("../images/screentshot2.png");
 }
 
 .work {
@@ -199,11 +220,21 @@ opacity: 1;
   display: flex;
 }
 
+.contact h1 {
+  margin-left: -80px;
+  margin-top: 0;
+}
+
+#section3 .me2 {
+  display: block;
+  padding-left: 210px;
+}
+
 .paragraph ul{
   display: flex;
   list-style-type: none;
-  padding-top: 40px;
-  color: var(--bright);
+  padding-top: 20px;
+  color:  rgb(27, 100, 36);
   font-weight: bold;
   font-size: 20px;
 }
@@ -215,7 +246,10 @@ opacity: 1;
 /*no underline on links and allowing for color change*/
 .paragraph ul li a:link, a:visited {
   text-decoration: none;
-  color: var(--bright);
+}
+
+.resume {
+  margin-left: -43px;
 }
 
 .resume p{
@@ -227,7 +261,8 @@ opacity: 1;
 
 .resume a:link, a:visited {
   text-decoration: none;
-  color: var(--bright);
+  color: rgb(27, 100, 36);
+  padding: 20px 0px 0 60px;
 }
 
 
